# stratagems-game

./: Cargo.toml  LICENSE  practice.sh
src/: lib.rs  main.rs
