[package]
name = "stratagems"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# NoBoilerplate Boilerplate Cargo.toml
[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
console = "0.15.8"
lazy_static = "1.4.0"
maplit = "1.0.2"
pretty-duration = "0.1.1"
rand = "0.8.5"
thiserror = "1.0.58"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary
